📚 Auto-update: News data refreshed - 2026-01-08 13:34 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -46222,5 +46222,157 @@
         "published": "Thu, 08 Jan 2026 11:23:43 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Kratikal Tech has filed its DRHP for an initial public offering with the Bombay Stock Exchange (BSE). The fresh issue comprises  up to 3 million equity shares of Rs 10 each.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-cybersecurity-firm-kratikal-tech-initial-public-offering-bse/\">Cybersecurity Firm Kratikal Tech Files For Initial Public Offering With BSE</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/08/former-bolt-ceo-maju-kuruvillas-startup-triples-to-100m-valuation/",
+        "title": "Former Bolt CEO Maju Kuruvilla\u2019s startup triples to $100M valuation",
+        "link": "https://techcrunch.com/2026/01/08/former-bolt-ceo-maju-kuruvillas-startup-triples-to-100m-valuation/",
+        "published": "Thu, 08 Jan 2026 13:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Spangle has raised $15 million in a Series A round to expand its AI-generated shopping experiences."
+    },
+    {
+        "id": "https://www.theverge.com/news/857883/google-gmail-ai-inbox-overviews",
+        "title": "Google is taking over your Gmail inbox with AI",
+        "link": "https://www.theverge.com/news/857883/google-gmail-ai-inbox-overviews",
+        "published": "2026-01-08T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Google is announcing a new AI Inbox view for Gmail that, instead of presenting your emails in a traditional list, uses AI to offer personalized to-dos and summaries of topics you might want to follow from your emails. It's a potentially huge shift in how you might navigate your Gmail, especially if you have a [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/google-ai-inbox-gmail/",
+        "title": "Google Is Adding an \u2018AI Inbox\u2019 to Gmail That Summarizes Emails",
+        "link": "https://www.wired.com/story/google-ai-inbox-gmail/",
+        "published": "Thu, 08 Jan 2026 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "New Gmail features, powered by the Gemini model, are part of Google\u2019s continued push for users to incorporate AI into their daily life and conversations."
+    },
+    {
+        "id": "https://www.wired.com/story/should-you-be-taking-creatine-supplements/",
+        "title": "Creatine Supplements Are Everywhere. Do I Need Them? (2026)",
+        "link": "https://www.wired.com/story/should-you-be-taking-creatine-supplements/",
+        "published": "Thu, 08 Jan 2026 12:30:00 +0000",
+        "source": "WIRED",
+        "summary": "It's the most studied supplement in sports medicine, but it's not just for athletes anymore."
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/volvos-ex60-electric-crossover-promises-400-miles-of-epa-range-130008964.html?src=rss",
+        "title": "Volvo's EX60 electric crossover promises 400 miles of EPA range",
+        "link": "https://www.engadget.com/transportation/evs/volvos-ex60-electric-crossover-promises-400-miles-of-epa-range-130008964.html?src=rss",
+        "published": "Thu, 08 Jan 2026 13:00:08 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Ahead of a launch later this month, Volvo has <a href=\"https://www.volvocars.com/us/media/images/ca4cd727e9c5475c9f59b3cb0108c259/\">teased</a> some impressive details about its upcoming electric crossover. The EX60, which slots between the EX40 and <a href=\"https://www.engadget.com/transportation/evs/volvos-ex90-suv-was-mostly-worth-the-wait-153035616.html\">EX90</a>, will offer an EPA range of 400 miles, beating all other Volvos and most EVs in general. It will also be the first Volvo car to "
+    },
+    {
+        "id": "https://www.engadget.com/ai/gmail-is-getting-a-gemini-ai-overhaul-130000422.html?src=rss",
+        "title": "Gmail is getting a Gemini AI overhaul",
+        "link": "https://www.engadget.com/ai/gmail-is-getting-a-gemini-ai-overhaul-130000422.html?src=rss",
+        "published": "Thu, 08 Jan 2026 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>In a move that should surprise nobody, Google is stuffing more Gemini AI into Gmail. A host of new features, some of which are already <a class=\"link\" href=\"https://www.engadget.com/apps/personalized-ai-powered-smart-replies-are-coming-to-gmail-172422777.html\" target=\"_blank\">familiar to Workspace users</a>, are rolling out today for Gmail users in the US. Some are free, while others require a <a class=\"link\" href=\"https://www.engadget.com/ai/google-wants-250-per-month-in-return-for-its-new-a"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/the-gaming-monitors-that-caught-our-eye-at-ces-2026-130000433.html?src=rss",
+        "title": "The gaming monitors that caught our eye at CES 2026",
+        "link": "https://www.engadget.com/computing/accessories/the-gaming-monitors-that-caught-our-eye-at-ces-2026-130000433.html?src=rss",
+        "published": "Thu, 08 Jan 2026 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-and-gadget-reveals-during-the-biggest-tech-event-of-the-year-153146751.html\" target=\"_blank\">CES</a> is about many things, but primarily it's about screens. TVs and laptops get the most attention, but you'll find all kinds of new PC monitors, too. At CES 2026, several companies are using the trade show as an opportunity to update their gaming monitor lineups. This year expanding what OLED panels can do in terms of refresh ra"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/08/1130880/the-download-mimicking-pregnancys-first-moments-in-a-lab-and-ai-parameters-explained/",
+        "title": "The Download: mimicking pregnancy\u2019s first moments in a lab, and AI parameters explained",
+        "link": "https://www.technologyreview.com/2026/01/08/1130880/the-download-mimicking-pregnancys-first-moments-in-a-lab-and-ai-parameters-explained/",
+        "published": "Thu, 08 Jan 2026 13:10:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "This is today&#8217;s edition of\u00a0The Download,\u00a0our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. Researchers are getting organoids pregnant with human embryos At first glance, it looks like the start of a human pregnancy: A ball-shaped embryo presses into the lining of the uterus then grips tight,&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/08/1129506/using-unstructured-data-to-fuel-enterprise-ai-success/",
+        "title": "Using unstructured data to fuel enterprise AI success",
+        "link": "https://www.technologyreview.com/2026/01/08/1129506/using-unstructured-data-to-fuel-enterprise-ai-success/",
+        "published": "Thu, 08 Jan 2026 13:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Enterprises are sitting on vast quantities of unstructured data, from call records and video footage to customer complaint histories and supply chain signals. Yet this invaluable business intelligence, estimated to make up as much as 90% of the data generated by organizations, historically remained dormant because its unstructured nature makes analysis extremely difficult. But if&#8230;"
+    },
+    {
+        "id": "https://ciechanow.ski/lights-and-shadows/",
+        "title": "Lights and Shadows",
+        "link": "https://ciechanow.ski/lights-and-shadows/",
+        "published": "Fri, 02 Jan 2026 19:24:10 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46468338\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/gmail-ai-overhaul-overviews-proofread-inbox-what-to-expect/",
+        "title": "Your Gmail is getting an AI makeover - here's what to expect and when",
+        "link": "https://www.zdnet.com/article/gmail-ai-overhaul-overviews-proofread-inbox-what-to-expect/",
+        "published": "Thu, 08 Jan 2026 13:00:47 GMT",
+        "source": "Latest news",
+        "summary": "Google is aggressively pushing Gemini across its apps and services in order to maintain an edge in the AI race. Your email won't ever be the same."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/nbfc-varthana-bags-6m-loan-from-waterequity-for-school-sanitation-projects",
+        "title": "NBFC Varthana bags $6M loan from WaterEquity for school sanitation projects",
+        "link": "https://yourstory.com/2026/01/nbfc-varthana-bags-6m-loan-from-waterequity-for-school-sanitation-projects",
+        "published": "Thu, 08 Jan 2026 13:00:27 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Backed by American actor Matt Damon, WaterEquity invests exclusively in water and sanitation projects. This transaction marks its first global investment in the school finance segment.\nThe funding will be used for school improvement loans that include water, sanitation and"
+    },
+    {
+        "id": "https://yourstory.com/2026/01/okta-yourstory-host-exclusive-webinar-securing-future-autonomous-ai-agents",
+        "title": "Okta and YourStory to host exclusive webinar on securing the future of autonomous AI agents",
+        "link": "https://yourstory.com/2026/01/okta-yourstory-host-exclusive-webinar-securing-future-autonomous-ai-agents",
+        "published": "Thu, 08 Jan 2026 12:56:18 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Join Okta executives to discover how Auth0's helps engineering teams ship secure features faster while reducing the total cost of ownership."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/indian-consumer-trends-in-2026-building-export-ready-food-labels",
+        "title": "Indian consumer trends in 2026; Building export-ready food labels",
+        "link": "https://yourstory.com/2026/01/indian-consumer-trends-in-2026-building-export-ready-food-labels",
+        "published": "Thu, 08 Jan 2026 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "YourStory spotlights the trends that will define the Indian consumer in 2026. LabelBlind is building export-ready labels for Starbucks, Amul, Everest and more. In Nanoor, kantha embroidery has been transformed from a domestic practice to a women-led enterprise."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/arali-ventures-generates-23x-return-from-full-exit-in-hbox",
+        "title": "Arali Ventures generates 23x return from full exit in HBOX",
+        "link": "https://yourstory.com/2026/01/arali-ventures-generates-23x-return-from-full-exit-in-hbox",
+        "published": "Wed, 07 Jan 2026 13:27:57 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Arali Ventures invested in remote healthcare services HBOX four years back, and it delivered a 120% internal rate of return."
+    },
+    {
+        "id": "https://inc42.com/buzz/mumbai-startup-funding-falls-46-yoy-to-2-1-bn-in-2025/",
+        "title": "Mumbai Startup Funding Falls 46% YoY To $2.1 Bn In 2025",
+        "link": "https://inc42.com/buzz/mumbai-startup-funding-falls-46-yoy-to-2-1-bn-in-2025/",
+        "published": "Thu, 08 Jan 2026 12:56:48 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Mumbai Startup Funding Falls 46% YoY To $2.1 Bn In 2025\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-100-5.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />When Mumbai topped the startup funding charts in 2024, it signalled India\u2019s financial capital\u2019s growing clout in the new-age tech&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/d2c-startup-nuuks-fy25-revenue-jumps-to-inr-16-cr/",
+        "title": "D2C Startup Nuuk\u2019s FY25 Revenue Jumps To INR 16 Cr",
+        "link": "https://inc42.com/buzz/d2c-startup-nuuks-fy25-revenue-jumps-to-inr-16-cr/",
+        "published": "Thu, 08 Jan 2026 12:52:07 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"D2C Startup Nuuk\u2019s FY25 Revenue Jumps To INR 16 Cr\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/ftr-1-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Home appliances D2C startup Nuuk saw its operating revenue zoom multifold to INR 16 Cr in the fiscal year 2024-25&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-us-withdrawal-global-digital-forums/",
+        "title": "What the US Withdrawal From Global Forums Means for Cyber and Digital Governance",
+        "link": "https://www.medianama.com/2026/01/223-us-withdrawal-global-digital-forums/",
+        "published": "Thu, 08 Jan 2026 12:55:03 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The US is withdrawing from key multilateral digital governance forums, reshaping the way cyber norms and internet rules are set globally. This retreat shifts agenda-setting power to other actors, creating opportunities for countries like China and Russia to influence global digital standards.</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-us-withdrawal-global-digital-forums/\">What the US Withdrawal From Global Forums Means for Cyber and Digital Governance</a> appeared first on"
+    },
+    {
+        "id": "https://www.medianama.com/2026/01/223-explained-cci-eros-over-ai-altered-raanjhanaa-movie-re-release/",
+        "title": "Explained: Why CCI Closed Complaint Against Eros Over AI-Altered \u2018Raanjhanaa\u2019 Movie Re-Release",
+        "link": "https://www.medianama.com/2026/01/223-explained-cci-eros-over-ai-altered-raanjhanaa-movie-re-release/",
+        "published": "Thu, 08 Jan 2026 12:40:53 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Dismissing the complaint against Eros, CCI remarked it doesn't fall under the competition law and there is no evidence that AI-altered ending affected consumer choice or pricing or other anti-competitive arguments</p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-explained-cci-eros-over-ai-altered-raanjhanaa-movie-re-release/\">Explained: Why CCI Closed Complaint Against Eros Over AI-Altered \u2018Raanjhanaa\u2019 Movie Re-Release</a> appeared first on <a href=\"https://www.medianama.com\">ME"
     }
 ]
