--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -46662,5 +46662,93 @@
         "published": "Thu, 08 Jan 2026 14:34:38 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Rajasthan Takes Centre Stage In India\u2019s AI Push At DigiFest X TiE Global Summit 2026\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/TGS-3rd-Post.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The final day of Rajasthan DigiFest X TiE Global Summit 2026 saw Jaipur host the Rajasthan Regional AI Impact Conference&#8230;"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/854163/honor-magic-8-pro-review",
+        "title": "Honor steps up to the big leagues with the Magic 8 Pro",
+        "link": "https://www.theverge.com/gadgets/854163/honor-magic-8-pro-review",
+        "published": "2026-01-08T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "I have a simple gut check I use when reviewing phones, especially ones that rely on their cameras as a selling point: how often do I wish I had another phone with me instead? These days, it's mostly the Vivo X300 Pro I miss when I'm testing something else, a phone whose camera remains unmatched. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/transportation/858514/is-this-the-worlds-first-solid-state-battery",
+        "title": "Is this the world\u2019s first solid-state battery?",
+        "link": "https://www.theverge.com/transportation/858514/is-this-the-worlds-first-solid-state-battery",
+        "published": "2026-01-08T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "CES is a land of bold announcements of amazing, innovative products and technologies that will revolutionize the world, often set for release in two years' time. Twenty-four months seems to be about the right hype window: close enough to generate excitement and investment, but far enough that everyone forgets about your promises before that deadline [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/858587/nintendo-my-mario-apparal-toys-book-mobile-app",
+        "title": "Nintendo is bringing its cute My Mario collection to the US next month",
+        "link": "https://www.theverge.com/tech/858587/nintendo-my-mario-apparal-toys-book-mobile-app",
+        "published": "2026-01-08T10:59:45-05:00",
+        "source": "The Verge",
+        "summary": "After exclusively launching in Japan last August, Nintendo has announced its My Mario product line will be available in the US starting next month. That includes the interactive Hello, Mario! app featuring an interactive 3D version of Mario's head that reacts to being poked, tugged, and flung around the screen. The app will be available [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/games/858127/top-five-most-played-games-xbox-ps5-2025",
+        "title": "The most popular games are getting harder and harder to usurp",
+        "link": "https://www.theverge.com/games/858127/top-five-most-played-games-xbox-ps5-2025",
+        "published": "2026-01-08T10:30:00-05:00",
+        "source": "The Verge",
+        "summary": "It's harder than ever for a new video game to crack the top of the most-played list. According to the Circana Player Engagement Tracker and video game market analyst Mat Piscatella, in 2025, the top five most-played games on PS5 and Xbox\u2026 were the same in 2024. And they likely won't be changing anytime soon. [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/computing/dell-unveils-a-massive-52-inch-6k-ultrawide-curved-monitor-at-ces-2026-140024842.html?src=rss",
+        "title": "Dell unveils a massive 52-inch 6K ultrawide curved monitor at CES 2026",
+        "link": "https://www.engadget.com/computing/dell-unveils-a-massive-52-inch-6k-ultrawide-curved-monitor-at-ces-2026-140024842.html?src=rss",
+        "published": "Thu, 08 Jan 2026 15:54:10 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>PC and <a class=\"link\" href=\"https://www.engadget.com/computing/accessories/the-gaming-monitors-that-caught-our-eye-at-ces-2026-130000433.html\" target=\"_blank\">gaming monitors</a> are among the <a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-and-gadget-reveals-during-the-biggest-tech-event-of-the-year-153146751.html\" target=\"_blank\">CES 2026</a> announcements, and Dell may just have one of the most impressive. The company launched an ultrawide, curved 52-inch 6K monitor a"
+    },
+    {
+        "id": "https://www.engadget.com/general/all-the-tech-and-gadgets-announced-at-ces-2026-130124023.html?src=rss",
+        "title": "All the tech and gadgets announced at CES 2026",
+        "link": "https://www.engadget.com/general/all-the-tech-and-gadgets-announced-at-ces-2026-130124023.html?src=rss",
+        "published": "Thu, 08 Jan 2026 15:48:19 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It's the first week of a new year and there's no time for the tech world to slowly ease back into things following the holidays. That's because <a class=\"link\" href=\"https://www.engadget.com/tag/ces-2026/\" target=\"_blank\">CES 2026</a> is in full swing, with all manner of companies descending on Las Vegas to reveal their latest innovations and what they're planning to bring your way in the near future.&nbsp;</p><p>Many of the Engadget crew are on the ground to check out as much of the new tech"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/xbox/the-next-xbox-developer-direct-showcase-is-on-january-22-154444166.html?src=rss",
+        "title": "The next Xbox Developer Direct showcase is on January 22",
+        "link": "https://www.engadget.com/gaming/xbox/the-next-xbox-developer-direct-showcase-is-on-january-22-154444166.html?src=rss",
+        "published": "Thu, 08 Jan 2026 15:44:44 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Xbox will kick off the fourth installment of its Developer Direct event on January 22 at 1PM ET. As usual, we'll get a glimpse at what the upcoming year has in store along with news, new gameplay footage and more directly from the teams behind this year's slate of games.</p>\n<div id=\"dc2da4839d114004a09bb024f46b7232\"><blockquote class=\"twitter-tweet\"><p dir=\"ltr\" lang=\"en\">It's officially Developer_Direct season!<br /><br />Join us on January 22 at 10am PT for an exclusive look at&nbsp;Fable,"
+    },
+    {
+        "id": "https://benraz.dev/blog/golang_review.html",
+        "title": "An Honest Review of Go",
+        "link": "https://benraz.dev/blog/golang_review.html",
+        "published": "Thu, 08 Jan 2026 15:37:06 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46542253\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/iiit-dharwad-to-deploy-indias-first-commercial-quantum-computer-says-karnataka-it/bt-minister-priyank-kharge/articleshow/126417958.cms",
+        "title": "IIIT Dharwad to deploy India's first commercial quantum computer, says Karnataka IT/BT minister Priyank Kharge",
+        "link": "https://economictimes.indiatimes.com/tech/technology/iiit-dharwad-to-deploy-indias-first-commercial-quantum-computer-says-karnataka-it/bt-minister-priyank-kharge/articleshow/126417958.cms",
+        "published": "Thu, 08 Jan 2026 21:06:32 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The Indian Institute of Information Technology, Dharwad (IIIT-D), will deploy India's first commercial quantum computer at its newly announced Centre for Excellence in Quantum AI and Computing, said Karnataka IT/BT Minister Priyank Kharge."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/the-sleep-company-appoints-former-eternal-exec-hemal-jain-as-cfo/articleshow/126417763.cms",
+        "title": "The Sleep Company appoints former Eternal exec Hemal Jain as CFO",
+        "link": "https://economictimes.indiatimes.com/tech/startups/the-sleep-company-appoints-former-eternal-exec-hemal-jain-as-cfo/articleshow/126417763.cms",
+        "published": "Thu, 08 Jan 2026 20:49:53 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Jain brings over two decades of experience spanning FMCG, food tech, quick commerce, B2B, and startup consulting. He previously served as global head of finance and CFO of Eternal\u2019s B2B grocery supply arm, Hyperpure, and was part of the senior management team that took the company public in July 2021."
+    },
+    {
+        "id": "https://inc42.com/buzz/now-eternal-get-two-fresh-gst-demand-notices-worth-inr-28-cr/",
+        "title": "Now, Eternal Get Two Fresh GST Demand Notices Worth INR 28 Cr",
+        "link": "https://inc42.com/buzz/now-eternal-get-two-fresh-gst-demand-notices-worth-inr-28-cr/",
+        "published": "Thu, 08 Jan 2026 16:06:26 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Zomato service charge\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/05/zomato-CEO-featured.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Adding to its tax troubles, Zomato and Blinkit parent Eternal has received two fresh GST demand orders totalling about INR&#8230;"
     }
 ]
